1-final changes